# CSCI4551_Final_Project

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/log/: latest_list
log/: latest_build  latest_list
src/cmdvel_tools/: package.xml  setup.cfg  setup.py
src/cmdvel_tools/cmdvel_tools/: twist_to_stamped.py
src/map_merge_package/: package.xml  setup.cfg  setup.py
src/map_merge_package/map_merge_package/: map_merge_node.py
src/maze_bringup_package/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/maze_bringup_package/config/: ekf.yaml  params.yaml  slam_params.yaml
src/maze_bringup_package/launch/: bringup.launch.py  example.py  launch_world.py  maze_and_turtlebot.launch.py  single_robot_launch.py  single_robot_nav2.launch.py  single_robot_slam.launch.py  single_robot_slam_nav2.launch.py  test.launch.py  two_robot_slam.launch.py  two_robot_slam_test_4.launch.py  two_robot_slam_test_5.launch.py
src/maze_bringup_package/launch/includes/: gazebo.launch.py
src/maze_bringup_package/maps/: maze_harmonic.sdf  maze_map.pgm  maze_map.yaml
src/maze_bringup_package/maze_bringup_package/: frontier_coordinator.py  frontier_explorer.py  initialpose_pub.py  odom_tf_broadcaster.py
src/maze_bringup_package/rviz/: maze.rviz
src/maze_bringup_package/worlds/: maze_harmonic.sdf
src/maze_solver_package/: package.xml  setup.cfg  setup.py
src/maze_solver_package/launch/: launch_file.py
src/maze_solver_package/maze_solver_package/: maze_solver_node.py  simple_drive.py  test_forward.py  wall_follower.py
(+16 files in other folders)
